@startuml app-logging
!theme plain
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 11
skinparam arrowThickness 1.5

title 应用层日志配置与流程

legend right
  |= 模块 |= 颜色 |= 说明 |
  | :app | ##E3F2FD | 应用层 |
  | :ime-engine | ##FFF3E0 | 引擎基础设施 |
endlegend

' ===== :ime-engine 引擎基础设施 =====
package ":ime-engine 引擎日志基础设施" #FFF3E0 {
  class ImeLog <<(O,#FFF3E0)>> {
    + level: LogLevel
    + init(level, writers)
    + updateLevel(newLevel)
    + logger(tag): ImeLogger
  }
  class LogWriter <<(I,#FFF3E0)>> {
    + write(entry)
    + flush()
  }
  class FileLogWriter <<(C,#FFF3E0)>> {
    - storage: LogStorage
  }
  class LogcatWriter <<(C,#FFF3E0)>> {
  }
  class CrashInterceptor <<(C,#FFF3E0)>> {
    + install()
  }
  class LogStorage <<(C,#FFF3E0)>> {
    + appendEntries(entries)
    + readLogs(...): List<LogEntry>
    + exportLogs(...)
    + updateDir(logDir)
  }
  class LogLevel <<(E,#FFF3E0)>> {
    VERBOSE / DEBUG / INFO / WARN / ERROR
  }
}

' ===== :app 应用层 =====
package ":app 应用层" #E3F2FD {

  package "初始化集成层" {
    class ImeApplication <<(C,#E3F2FD)>> {
      + onCreate()
    }
    class "initLogging(context, config)" as InitLog <<(F,#E3F2FD)>> {
      根据 BuildConfig.DEBUG 确定等级
      创建 LogcatWriter (仅 debug)
      创建 FileLogWriter
      ImeLog.init(level, writers)
      CrashInterceptor.install()
    }
    class "resolveLogDir(context, path)" as ResolveDir <<(F,#E3F2FD)>> {
      优先: 用户配置路径 (SAF URI)
      缺省: {filesDir}/logs/
      降级: 无效路径 → 缺省 + 警告
    }
  }

  package "配置管理层" {
    class ConfigDataStore <<(C,#E3F2FD)>> {
      + config: Flow<ImeConfig>
      + updateConfig(transform)
      持久化 logLevel, logStoragePath
    }
  }

  package "用户界面层" {
    class LogViewerScreen <<(C,#E3F2FD)>> {
      LazyColumn 渲染日志
      等级过滤 / 关键词搜索
      颜色编码 (V=灰/D=蓝/I=绿/W=橙/E=红)
    }
    class LogExportScreen <<(C,#E3F2FD)>> {
      Activity Result API
      CreateDocument 合约
      导出指定日期范围日志
    }
    class LogLevelSetting <<(C,#E3F2FD)>> {
      Debug: 固定 VERBOSE (不可修改)
      Release: 用户可选择等级
    }
    class LogStoragePathSetting <<(C,#E3F2FD)>> {
      SAF OpenDocumentTree
      持久化 URI 权限
    }
    class LogViewerViewModel <<(C,#E3F2FD)>> {
      - storage: LogStorage
      + state: StateFlow<LogViewerState>
      + refresh()
      + setLevelFilter(level?)
      + setKeyword(keyword?)
    }
  }
}

' ===== 初始化流程 =====
ImeApplication --> InitLog : onCreate()
InitLog --> ResolveDir : 解析路径
InitLog --> ImeLog : init(level, writers)
InitLog --> CrashInterceptor : install()

ResolveDir --> LogStorage : 创建

LogWriter <|.. FileLogWriter
LogWriter <|.. LogcatWriter
FileLogWriter --> LogStorage : 写入
CrashInterceptor --> LogStorage : 崩溃直接写入
ImeLog --> LogWriter : dispatch

' ===== 配置变更流程 =====
rectangle "等级变更流程" #FFF9C4 {
  LogLevelSetting --> ConfigDataStore : updateConfig\n(logLevel = newLevel)
  ConfigDataStore --> ImeLog : updateLevel(newLevel)
  ImeLog --> LogWriter : 后续按新等级过滤
}

rectangle "路径变更流程" #FFF9C4 {
  LogStoragePathSetting --> ConfigDataStore : updateConfig\n(logStoragePath = newPath)
  ConfigDataStore --> LogStorage : updateDir(newDir)
  LogStorage --> FileLogWriter : 后续写入新路径
}

' ===== 日志查看/导出 =====
LogViewerScreen --> LogViewerViewModel : collectAsState()
LogViewerViewModel --> LogStorage : readLogs(...)
LogExportScreen --> LogStorage : exportLogs(...)

' ===== 日志标签约定 =====
note bottom
  **层级标签约定**
  | 层 | 前缀 | 示例 |
  |---|---|---|
  | Platform | IME# | InputConnection 操作 |
  | ViewModel | VM# | Intent 处理 |
  | Domain | KB# / IL# / Dict# | 键盘/输入列表/字典 |
  | Data | DB# / DS# | 数据库/DataStore |
  | 崩溃 | Crash | 未捕获异常 |

  **等级使用指南**
  | 等级 | 场景 |
  |---|---|
  | VERBOSE | 细粒度流程追踪 |
  | DEBUG | 开发期调试信息 |
  | INFO | 关键业务节点 |
  | WARN | 可恢复异常 |
  | ERROR | 不可恢复错误 |
end note

@enduml
